--- a/index.html
+++ b/index.html
@@ -5,11 +5,10 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>Project-28</title>
       <style> body {padding: 0; margin: 0;} </style>
-      <script src="stone.js"></script>
+      <script src="hex.js"></script>
       <script src="rope.js"></script>
       <script src="Ground.js"></script>
-      <script src="mango.js"></script>
-      <script src="Drop.js"></script>
+      <script src="box.js"></script>
       <script src="p5.min.js"></script>
       <script src="p5.dom.min.js"></script>
       <script src="p5.play.js"></script>
